css/style.css
/* ... */
  .welcome h1 {
    position: relative;
    color: #ffffff;
    font-size: 38px;
    line-height: 38px;
    font-weight: 300;
    margin-bottom: 40px; }
    .welcome h1 span:before {
      content: '';
      position: absolute;
      top: 0;
      left: -135px;
      width: 125px;
      height: 100%;
      background: url("/wp-content/uploads/2018/09/h1-before.png") no-repeat;
      -webkit-transform: translateY(50%);
      -ms-transform: translateY(50%);
      transform: translateY(50%); }
    .welcome h1 span:after {
      content: '';
      position: absolute;
      top: 0;
      right: -135px;
      width: 125px;
      height: 100%;
      background: url("/wp-content/uploads/2018/09/h1-after.png") no-repeat;
      -webkit-transform: translateY(50%);
      -ms-transform: translateY(50%);
      transform: translateY(50%); }
    .welcome h1 span {
      position: relative; }
  .welcome h2 {
    color: #ffffff;
    font-size: 28.5px;
    font-weight: 300; }

.booking {
  width: 100%;
  background-color: rgba(24, 136, 172, 0.7);
  -webkit-border-radius: 4px;
  border-radius: 4px;
  overflow-x: hidden;
  overflow: inherit; }

.directions {
  position: relative; }
  .directions h2 {
    position: relative;
    font-size: 44px;
    text-align: center;
    padding: 10px 15px; }
  .directions h2:before {
    content: '';
    width: 80%;
    height: 0;
    position: absolute;
    bottom: 0;
    right: 0;
    border-left: 3px solid #0089c8;
    border-bottom: 3px solid #0089c8; }
  .directions h2:after {
    content: '';
    width: 10%;
    height: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    border-right: 3px solid #0089c8;
    border-top: 3px solid #0089c8; }
  .directions .direction {
    background-color: #ffffff;
    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    overflow: hidden; }
    .directions .direction a {
      color: #4f4f4f; }
      .directions .direction ahover {
        text-decoration: none; }
    .directions .direction__photo {
      height: 185px;
      position: relative;
      margin-bottom: 20px;
      -webkit-transition: -webkit-background-size 0.5s;
      transition: -webkit-background-size 0.5s;
      -o-transition: background-size 0.5s;
      transition: background-size 0.5s;
      transition: background-size 0.5s, -webkit-background-size 0.5s; }
    .directions .direction__title {
      width: 100%;
      position: absolute;
      bottom: 0px;
      font-size: 21px;
      color: #ffffff;
      background-color: rgba(0, 0, 0, 0.7);
      text-align: center;
      padding: 20px 0px; }
    .directions .direction__time {
      color: #4f4f4f;
      font-size: 15px;
      margin-bottom: 35px; }
    .directions .direction__hours {
      font-size: 24px;
      font-weight: 600; }
    .directions .direction__minutes {
      position: relative;
      top: -10px;
      font-size: 19px;
      font-weight: 600; }
    .directions .direction__icon i {
      position: relative;
      top: 3px;
      color: #4f4f4f;
      font-size: 24px;
      margin-right: 5px; }
    .directions .direction__price {
      color: #4f4f4f;
      font-size: 42px;
      margin-bottom: 35px; }
      .directions .direction__price span {
        font-size: 15px; }
    .directions .direction__button {
      color: #ffffff;
      font-size: 25px;
      background-color: #0089c8;
      -webkit-border-radius: 5px;
      border-radius: 5px;
      -webkit-box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
      box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
      padding: 15px 30px;
      margin-bottom: 10px; }
    .directions .direction__more {
      color: #4f4f4f;
      font-size: 17px;
      padding-bottom: 10px; }
      .directions .direction__more svg {
        -webkit-transform: rotateY(180deg);
        transform: rotateY(180deg); }
    .directions .direction:hover .direction__photo {
      -webkit-background-size: 110% 110% !important;
      background-size: 110% !important;
      -webkit-transition: -webkit-background-size 0.5s;
      transition: -webkit-background-size 0.5s;
      -o-transition: background-size 0.5s;
      transition: background-size 0.5s;
      transition: background-size 0.5s, -webkit-background-size 0.5s; }
  .directions__line1 {
    height: 3px;
    width: 375px;
    position: absolute;
    top: 120px;
    left: 0;
    background-color: #0089c8;
    -webkit-transform: rotate(-35deg);
    -ms-transform: rotate(-35deg);
    transform: rotate(-35deg); }
  .directions__line2 {
    height: 10px;
    width: 210px;
    position: absolute;
    top: 155px;
    left: 60px;
    background-color: #0089c8;
    -webkit-transform: rotate(-25deg);
    -ms-transform: rotate(-25deg);
    transform: rotate(-25deg); }
  .directions__line3 {
    height: 20px;
    width: 195px;
    position: absolute;
    top: 160px;
    left: 100px;
    background-color: #0089c8;
    -webkit-transform: rotate(-15deg);
    -ms-transform: rotate(-15deg);
    transform: rotate(-15deg); }
  .directions__line4 {
    height: 40px;
    width: 335px;
    position: absolute;
    top: 168px;
    left: 80px;
    background-color: #0089c8;
    -webkit-transform: rotate(-31deg);
    -ms-transform: rotate(-31deg);
    transform: rotate(-31deg); }
  .directions__line5 {
    height: 12px;
    width: 835px;
    position: absolute;
    top: 380px;
    right: 0px;
    background-color: #0089c8;
    -webkit-transform: rotate(-42deg);
    -ms-transform: rotate(-42deg);
    transform: rotate(-42deg); }
  .directions__line6 {
    height: 4px;
    width: 610px;
    position: absolute;
    top: 430px;
    right: -50px;
    background-color: #0089c8;
    -webkit-transform: rotate(-62deg);
    -ms-transform: rotate(-62deg);
    transform: rotate(-62deg); }

.route {
  width: 100%;
  overflow: hidden; }
/* ... */

